--- a/index.html
+++ b/index.html
@@ -2,25 +2,15 @@
     <head>
         <title>GameTest</title>
 
-        <link type="stylesheet" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.3/phaser.min.js"></script>
     </head>
 
-    <body style="margin: 0; padding: 0";>
+    <body>
         <canvas id="game" style="position: absolute; width: 100%; height: 100%"></canvas>
 
-        <script type="text/javascript">
-            var canvas = document.getElementById("game");
-            var ctx = canvas.getContext("2d");
-
-            canvas.height = window.innerHeight;
-            canvas.width = window.innerWidth;
-            
-            ctx.fillStyle = "#FF0000";
-            ctx.fillRect(0,0,150,75);
-            ctx.fillStyle = "#000";
-            ctx.fillText("Hello world!", 20, 30);
-        </script>
+        <script src="game.js"></script>
     </body>
 </html>
