--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.3/phaser.min.js"></script>
+        
+        <!-- jQuery plugins -->
+        <script src="jquery.caret.js"></script>
     </head>
 
     <body>
-        <canvas id="game" style="position: absolute; width: 100%; height: 100%"></canvas>
-
+        <input type="text" id="chat">
         <script src="game.js"></script>
     </body>
 </html>
